# Calculator

./: .gitignore  LICENSE  README.md  install.sh  pubspec.yaml
plugins/calc_manager/: Cargo.toml  calc_manager.idl  calc_manager.ids  pubspec.yaml
plugins/calc_manager/lib/: calc_manager.dart
plugins/calc_manager/lib/src/: idl_ffi.dart  idl_interface_constructor.dart  idl_types.dart  idl_types_interface.dart
plugins/calc_manager/rust/calc_manager/: Cargo.toml
plugins/calc_manager/rust/calc_manager/idl_types/src/: idl_impl.rs  lib.rs
plugins/calc_manager/rust/calc_manager/src/: lib.rs
plugins/calc_manager/rust/calc_manager/src/engine/: calc_display.rs  calc_input.rs  command.rs  constants.rs  expression_command.rs  history.rs  history_display.rs  mod.rs  radix_type.rs  scicomm.rs  scidisp.rs  scifunc.rs  scioper.rs  sciset.rs
plugins/calc_manager/rust/calc_manager/src/engine_strings/: en_us.rs  engine_string.rsw  mod.rs  pt_br.rs
plugins/calc_manager/rust/calc_manager/src/manager/: history.rs  mod.rs  (+1 more)
plugins/calc_manager/rust/calc_manager_ffi/: Cargo.toml
plugins/calc_manager/rust/calc_manager_ffi/src/: idl_ffi.rs  idl_ffi_impl.rs  idl_ffi_types.rs  lib.rs
plugins/calc_manager/rust/calc_manager_types/: Cargo.toml
plugins/calc_manager/rust/calc_manager_types/src/: idl_impl.rs  lib.rs
plugins/calc_manager/src/: idl_ffi.rs  idl_ffi_impl.rs  idl_ffi_types.rs  idl_impl.rs  idl_types.rs  impl_calc_manager.rs  lib.rs
plugins/calc_manager/tests/: main.dart
plugins/calc_manager_impl/: Cargo.toml  build.rs
plugins/calc_manager_impl/src/: calc.rs  lib.rs
(+24 files in other folders)
