[package]
name = "calc_manager_impl"
version = "0.1.0"
authors = ["Adriano <adriano.souza113@gmail.com>"]
edition = "2018"

[dependencies]
idl_internal = { git = "https://github.com/adrianos42/native_idl" }
anyhow = "1.0"
idl_gen = { path = "/home/adriano/repos/native_idl/idl_gen" }

[build-dependencies]
idl_gen = { path = "/home/adriano/repos/native_idl/idl_gen" }
anyhow = "1.0"

[lib]
name = "calc_manager"
crate-type = ["staticlib", "cdylib"]