[package]
name = "calc_manager_ffi"
version = "0.1.0"
authors = ["Adriano Souza"]
edition = "2018"

[dependencies.conquer-once]
version = "0.2.1"
default-features = false

[lib]
name = "calc_manager"
crate-type = ["staticlib", "cdylib"]

[dependencies]
lazy_static = "1.4.0"
idl_internal = { git = "https://github.com/adrianos42/native_idl" }
calc_manager_types = { path = "../calc_manager_types" }
calc_manager_impl = { path = "../../../calc_manager_impl" }